# bench-lib

./: .gitignore  CMakeLists.txt  README.md
include/bench-lib/: benchmark.hpp  benchmark_base.hpp  benchmark_builder.hpp  benchmark_case.hpp  benchmark_manager.hpp
results/: random_access_10000000.csv  search_experiment.csv
results/plots/: plot_access_exp.p  plot_search_exp.p
src/: benchmark_append_csv.cpp  benchmark_base_append_csv.cpp  benchmark_base_write_csv.cpp  benchmark_builder.cpp  benchmark_manager.cpp  benchmark_run.cpp  benchmark_write_csv.cpp
test/: CMakeLists.txt  test_example.cpp  test_main.cpp
